--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
 	<!-- Required meta tags -->
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<link rel="icon" href="img/favicon.png" type="image/png">
+	<link rel="icon" href="img/icon.png" type="image/png">
 	<title>About Us</title>
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="css/bootstrap.css">
@@ -26,7 +26,7 @@
 			<nav class="navbar navbar-expand-lg navbar-light">
 				<div class="container">
 					<!-- Brand and toggle get grouped for better mobile display -->
-					<a class="navbar-brand logo_h" href="index.html"><img src="img/lo.pgong" alt=""></a>
+					<a class="navbar-brand logo_h" href="index.html"><img src="img/logo-my-portfolio.png" alt=""></a>
 					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
 					 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 						<span class="icon-bar"></span>
@@ -40,7 +40,7 @@
 							<li class="nav-item active"><a class="nav-link" href="about.html">About</a></li>
 							<li class="nav-item submenu dropdown">
 								<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-								 aria-expanded="false">Blog</a>
+								 aria-expanded="false">Skills</a>
 								<ul class="dropdown-menu">
 									<li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
 									<li class="nav-item"><a class="nav-link" href="single-blog.html">Blog Details</a></li>
@@ -72,6 +72,9 @@
     <!--================ End Banner Area =================-->
     
    <!--================ Start About Us Area =================-->
+
+
+</div>
 	<section class="about_area section_gap">
         <div class="container">
             <div class="row justify-content-start align-items-center">
@@ -86,14 +89,9 @@
                         <h2>let’s <br>
                             Introduce about <br>
                             myself</h2>
-                        <p>
-                            Whose given. Were gathered. There first subdue greater. Bearing you Whales heaven 
-                            midst their. Beast creepeth. Fish days.
-                        </p>
-                        <p>
-                            Is give may shall likeness made yielding spirit a itself together created after sea 
-                            is in beast beginning signs open god you're gathering whose gathered cattle let. 
-                            Creature whales fruit unto meat the life beginning all in under give two.
+                        <P>
+                            👋 Hello! I'm Harshal, a recent B.Sc. Computer Science graduate eager to explore the world of Amazon Web Services (AWS). Passionate about cloud computing and equipped with a solid foundation in programming, I'm excited to apply my skills to real-world cloud projects. Let's connect and discuss how I can contribute to your team!
+							📧 Contact: harshaljoshi9922@gmail.com
                         </p>
                         <a class="primary_btn" href="#"><span>Download CV</span></a>
                     </div>
@@ -197,101 +195,7 @@
     <!--================ End Brand Area =================-->
 
 	<!--================ Start Testimonial Area =================-->
-	<div class="testimonial_area section_gap_bottom">
-        <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-lg-8 text-center">
-                    <div class="main_title">
-                        <h2>client say about me</h2>
-                        <p>Is give may shall likeness made yielding spirit a itself togeth created after sea is in beast <br>
-                                beginning signs open god you're gathering ithe</p>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="testi_slider owl-carousel">
-                    <div class="testi_item">
-                        <div class="row">
-                            <div class="col-lg-4">
-                                <img src="img/testimonials/t1.jpg" alt="">
-                            </div>
-                            <div class="col-lg-8">
-                                <div class="testi_text">
-                                    <h4>Elite Martin</h4>
-                                    <p>Him, made can't called over won't there on divide there male fish beast own his day third seed sixth seas unto. Saw from </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="testi_item">
-                        <div class="row">
-                            <div class="col-lg-4">
-                                <img src="img/testimonials/t2.jpg" alt="">
-                            </div>
-                            <div class="col-lg-8">
-                                <div class="testi_text">
-                                    <h4>Davil Saden</h4>
-                                    <p>Him, made can't called over won't there on divide there male fish beast own his day third seed sixth seas unto. Saw from </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="testi_item">
-                        <div class="row">
-                            <div class="col-lg-4">
-                                <img src="img/testimonials/t1.jpg" alt="">
-                            </div>
-                            <div class="col-lg-8">
-                                <div class="testi_text">
-                                    <h4>Elite Martin</h4>
-                                    <p>Him, made can't called over won't there on divide there male fish beast own his day third seed sixth seas unto. Saw from </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="testi_item">
-                        <div class="row">
-                            <div class="col-lg-4">
-                                <img src="img/testimonials/t2.jpg" alt="">
-                            </div>
-                            <div class="col-lg-8">
-                                <div class="testi_text">
-                                    <h4>Davil Saden</h4>
-                                    <p>Him, made can't called over won't there on divide there male fish beast own his day third seed sixth seas unto. Saw from </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="testi_item">
-                        <div class="row">
-                            <div class="col-lg-4">
-                                <img src="img/testimonials/t1.jpg" alt="">
-                            </div>
-                            <div class="col-lg-8">
-                                <div class="testi_text">
-                                    <h4>Elite Martin</h4>
-                                    <p>Him, made can't called over won't there on divide there male fish beast own his day third seed sixth seas unto. Saw from </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="testi_item">
-                        <div class="row">
-                            <div class="col-lg-4">
-                                <img src="img/testimonials/t2.jpg" alt="">
-                            </div>
-                            <div class="col-lg-8">
-                                <div class="testi_text">
-                                    <h4>Davil Saden</h4>
-                                    <p>Him, made can't called over won't there on divide there male fish beast own his day third seed sixth seas unto. Saw from </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+	
     <!--================ End Testimonial Area =================-->
     
     <!--================ Start Newsletter Area =================-->
@@ -334,10 +238,10 @@
                             <h4>Follow Me</h4>
                         </div>
                         <div class="footer_social">
-                            <a href="#"><i class="fa fa-facebook"></i></a>
-                            <a href="#"><i class="fa fa-twitter"></i></a>
-                            <a href="#"><i class="fa fa-dribbble"></i></a>
-                            <a href="#"><i class="fa fa-behance"></i></a>
+                            <a href="#"><i class="fa fa-whatsapp"></i></a>
+							<a href="#"><i class="fa fa-github"></i></a>
+							<a href="#"><i class="fa fa-facebook"></i></a>
+							<a href="#"><i class="fa fa-linkedin"></i></a>
                         </div>
                     </div>
                 </div>
