--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 							<li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
 							<li class="nav-item submenu dropdown">
 								<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-								 aria-expanded="false">Blog</a>
+								 aria-expanded="false">Skills</a>
 								<ul class="dropdown-menu">
 									<li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
 									<li class="nav-item"><a class="nav-link" href="single-blog.html">Blog Details</a></li>
@@ -154,10 +154,10 @@
 							<h4>Follow Me</h4>
 						</div>
 						<div class="footer_social">
+							<a href="#"><i class="fa fa-whatsapp"></i></a>
+							<a href="#"><i class="fa fa-github"></i></a>
 							<a href="#"><i class="fa fa-facebook"></i></a>
-							<a href="#"><i class="fa fa-twitter"></i></a>
-							<a href="#"><i class="fa fa-dribbble"></i></a>
-							<a href="#"><i class="fa fa-behance"></i></a>
+							<a href="#"><i class="fa fa-linkedin"></i></a>
 						</div>
 					</div>
 				</div>
@@ -165,7 +165,7 @@
 			<div class="row footer_bottom justify-content-center">
 				<p class="col-lg-8 col-sm-12 footer-text">
 					<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This is Made By <i class="" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Harshal Joshi</a>
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This is Made By <i class="" aria-hidden="true"></i> by <a>Harshal Joshi</a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
 			</div>
 		</div>
